--- a/src/components/ui/button/button.scss
+++ b/src/components/ui/button/button.scss
@@ -1,4 +1,5 @@
 .button {
+  display: inline-block;
   border-radius: var(--app-button-radius);
   min-height: var(--app-button-height);
   padding: var(--app-button-padding);
