--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,8 +3,10 @@
   --app-blue: 49 111 234; // #316FEA
   --app-grey: 211 216 220; // #D3D8DC
   --app-black: 6 14 30; // #060E1E
+  --app-black-2: 26 25 25; // #1A1919
   --app-grey-light: 190 197 204; // #E3E6E9
   --app-grey-dark: 227 230 233; // #BEC5CC
+  --app-red: 255 0 0; // #FF0000
 
   --app-color-primary: rgb(var(--app-blue));
   --app-color-primary-hover: rgb(var(--app-blue) / 0.8);
