--- a/src/layouts/auth/auth.scss
+++ b/src/layouts/auth/auth.scss
@@ -1,11 +1,27 @@
 .auth {
   padding: 40px 0;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  &__container {
-    max-width: 400px;
+  &__container.container {
+    max-width: 440px;
   }
 
   &__content {
+  }
+
+  &__logo {
+    margin-bottom: 74px;
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 1.3;
+    margin-bottom: 38px;
+    color: rgb(var(--app-black-2));
   }
 }
