--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -9,7 +9,7 @@
   &__bottom-info {
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 14px;
+    font-weight: 400;
   }
 
   .button {
@@ -23,7 +23,7 @@
   justify-content: center;
   gap: 6px;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: var(--app-small-font-size);
   line-height: 1.33;
   color: rgb(var(--app-grey-dark));
 
