--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,7 +9,7 @@ body {
   font-size: var(--app-base-font-size);
   font-weight: var(--app-base-font-weight);
   line-height: 1.4;
-  font-family: 'Roboto', monospace;
+  font-family: var(--app-font-family);
   font-optical-sizing: auto;
   font-style: normal;
 }
