updated page forgot password and forms for page

--- a/src/components/ui/button/button.scss
+++ b/src/components/ui/button/button.scss
@@ -9,6 +9,7 @@
   font-size: var(--app-button-size);
   background-color: transparent;
   font-weight: 500;
+  line-height: 1.4;
   outline: none;
   cursor: pointer;
   transition: color var(--app-transition-speed) linear,
